finetune with hydra updated

--- a/configs/paths/default.yaml
+++ b/configs/paths/default.yaml
@@ -6,16 +6,14 @@ root_dir: .
 
 # # path to data directory
 # data_dir: ${paths.root_dir}/data/
-
-# model_dir: ${paths.root_dir}/checkpoints/
-
-# path to logging directory
-log_dir: ${paths.root_dir}/logs/
-
+hydra_output: ${paths.root_dir}/hydra_outputs/
 # path to output directory, created dynamically by hydra
 # path generation pattern is specified in `configs/hydra/default.yaml`
 # use it to store all files generated during the run, like ckpts and metrics
 output_dir: ${paths.root_dir}/outputs/
+
+# path to logging directory
+log_dir: ${paths.output_dir}/logs/
 
 # path to working directory
 work_dir: ${hydra:runtime.cwd}
