--- a/configs/hydra/default.yaml
+++ b/configs/hydra/default.yaml
@@ -8,7 +8,7 @@ defaults:
 # output directory, generated dynamically on each run
 # refer https://hydra.cc/docs/configure_hydra/workdir/
 run:
-  dir: ${paths.log_dir}/${task_name}/runs/${now:%Y-%m-%d}_${now:%H-%M-%S}
+  dir: ${paths.hydra_output}/${task_name}/runs/${now:%Y-%m-%d}_${now:%H-%M-%S}
 sweep:
-  dir: ${paths.log_dir}/${task_name}/multiruns/${now:%Y-%m-%d}_${now:%H-%M-%S}
+  dir: ${paths.hydra_output}/${task_name}/multiruns/${now:%Y-%m-%d}_${now:%H-%M-%S}
   subdir: ${hydra.job.num}
