--- a/configs/model/default.yaml
+++ b/configs/model/default.yaml
@@ -1,22 +1,3 @@
-lora:
-  _target_: peft.LoraConfig
-  lora_alpha: 16
-  lora_dropout: 0.1
-  r: 64
-  bias: "none"
-  task_type: "CAUSAL_LM"
-  target_modules: [
-        "q_proj",
-        "k_proj",
-        "v_proj",
-        # "o_proj",
-        # "gate_proj",
-        # "up_proj",
-        # "down_proj",
-        # "lm_head",
-  ]
-
-
 bitsandbytes:
   _target_: transformers.BitsAndBytesConfig
   load_in_4bit: true
@@ -31,7 +12,7 @@ model:
   pretrained_model_name_or_path: ${model.model_id}
   quantization_config: ${model.bitsandbytes}
   use_cache: False
-  use_flash_attention_2: True
+  attn_implementation: "flash_attention_2"
   device_map: "auto"
 
 tokenizer:
